# Gazebo_landing

./: .gitignore  README.md  env.sh  gitscript.sh  position.txt  remove.sh
Command/: landcmd.py
Simulation/: _d435.gazebo.xacro  empty.world  iris.sdf  manifest.xml
Simulation/aruco_visual_marker_4/: model.config  model.sdf
Simulation/aruco_visual_marker_6/: model.config  model.sdf
Simulation/d435_camera/: model.config  my_sdf.sdf
Simulation/husky_gazebo/launch/: husky_empty_world.launch  mavros.launch  tracker.launch
Simulation/husky_gazebo/worlds/: apriltag.world  empty.world
Simulation/husky_gazebo/worlds/husky_car/: model.sdf
Simulation/launch/: spawn_husky.launch  tracker.launch
Simulation/src/realsense_gazebo_plugin/: CMakeLists.txt
Tool/: pid.py
Tool/generate_marker/: auto.sh  main.cpp  out
husky_car/: model.config  model.sdf
image/: README.md
kalman_filter/: Kalmanfilter.cpp  Kalmanfilter.h
scripts/: gui_script.sh
src/apriltag_detector/: CMakeLists.txt  package.xml
src/apriltag_detector/launch/: detector.launch
src/apriltag_detector/src/: apriltag_detector.cpp
src/aruco_detector/: CMakeLists.txt  README.md  package.xml
src/aruco_detector/config/: aruco_opencv.rviz
src/aruco_detector/launch/: detector.launch
src/aruco_detector/src/: aruco_detector.cpp
src/calculationPS/: CMakeLists.txt  package.xml
src/calculationPS/src/: calculationps.cpp  calculationps111.cpp
src/controlPID/: CMakeLists.txt  package.xml
src/controlPID/src/: controlpid.cpp
src/getpose/: CMakeLists.txt  package.xml
src/getpose/src/: getpose_kl.cpp
src/kalman/: CMakeLists.txt  package.xml
src/kalman/launch/: kalman.launch
src/kalman/src/: kf_tracker.cpp  kf_tracker.h  kf_tracker_node.cpp
src/offboard/: CMakeLists.txt  package.xml
src/offboard/src/: offb_node.cpp
src/scripts/: cam_open.py  joystick.py
src/testing/: CMakeLists.txt  package.xml
src/testing/src/: test_separate.cpp
src/tracker_ekf/: CMakeLists.txt  package.xml
src/tracker_ekf/scripts/: EKF.py  __init__.py  tracker_ekf.py
src/tracker_ekf/src/: update_target.cpp
