<?xml version="1.0"?>
<package format="2">
    <name>testing</name>
    <version>0.1.1</version>
    <description>The subscribe package.</description>
    <author email="abc@gmail.com">nam97</author>
    <maintainer email="abc@gmail.com">Markus Lamprecht</maintainer>
    <license>BSD</license>
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>tf2_ros</build_depend>
    <build_depend>tf2</build_depend>

    <exec_depend>std_msgs</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>rospy</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>tf2_ros</exec_depend>
    <exec_depend>tf2</exec_depend>
</package>
